# qt-clicker

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  main.cpp  qtclicker.cpp  qtclicker.h  qtclicker.ui
header/: MainWindow.h  SettingsHandler.h  SettingsWindow.h  qtclicker.h  settings.h  stdafx.h
source/: MainWindow.cpp  SettingsHandler.cpp  SettingsWindow.cpp  main.cpp  qtclicker.cpp  settings.cpp
ui/: MainWindow.ui  SettingsWindow.ui  settings.ui
